standeralize fonts in in home page , and fix footer spacing

--- a/assets/css/home_1_style.css
+++ b/assets/css/home_1_style.css
@@ -1,20 +1,32 @@
 /* ========= [ * page-home_1 ]  =========*/
-/* open-sans-regular - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Open Sans';
+.kanit-light {
+  font-family: "Kanit", sans-serif;
+  font-weight: 300;
   font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/open-sans-v40-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-/* open-sans-600 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Open Sans';
+.kanit-regular {
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
   font-style: normal;
+}
+
+.kanit-medium {
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.kanit-semibold {
+  font-family: "Kanit", sans-serif;
   font-weight: 600;
-  src: url('../fonts/open-sans-v40-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-style: normal;
+}
+
+.kanit-bold {
+  font-family: "Kanit", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 h5,h3,h6{
@@ -1439,5 +1451,19 @@ html[lang="ar"] .home-style1 {
 
   .contact-text {
       margin-top: 10px;
+  }
+}
+
+
+@media (min-width: 768px) {
+  .p-left {
+      padding-left: 55px;  /* Adjust the padding value as per your design requirements */
+  }
+}
+
+/* Remove padding for .col-3 in mobile view */
+@media (max-width: 990px) {
+  .p-left {
+      padding-left: 0;  /* Removes padding on mobile screens */
   }
 }
